@@ -21,6 +21,9 @@ BUGFIXES:
   ZOOKEEPER-738. zookeeper.jute.h fails to compile with -pedantic
   (Jozef Hatala via phunt)
 
+  ZOOKEEPER-734. QuorumPeerTestBase.java and ZooKeeperServerMainTest.java
+  do not handle windows path correctly (Vishal K via phunt)
+
 Release 3.3.0 - 2010-03-24
 
 Non-backward compatible changes:
